cdk.out/Ec2ForDL2.template.json
{
 "Resources": {
  "Ec2ForDlVpcE65EB314": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.10.0.0/23",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2ForDL2/Ec2ForDl-Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Vpc/Resource"
   }
  },
  "Ec2ForDlVpcpublicSubnet1Subnet57047971": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.10.0.0/23",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "Ec2ForDL2/Ec2ForDl-Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Ec2ForDlVpcE65EB314"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Vpc/publicSubnet1/Subnet"
   }
  },
  "Ec2ForDlVpcpublicSubnet1RouteTable939D7A29": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2ForDL2/Ec2ForDl-Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Ec2ForDlVpcE65EB314"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Vpc/publicSubnet1/RouteTable"
   }
  },
  "Ec2ForDlVpcpublicSubnet1RouteTableAssociation71815FCA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "Ec2ForDlVpcpublicSubnet1RouteTable939D7A29"
    },
    "SubnetId": {
     "Ref": "Ec2ForDlVpcpublicSubnet1Subnet57047971"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "Ec2ForDlVpcpublicSubnet1DefaultRoute1E050367": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "Ec2ForDlVpcIGW1AE92644"
    },
    "RouteTableId": {
     "Ref": "Ec2ForDlVpcpublicSubnet1RouteTable939D7A29"
    }
   },
   "DependsOn": [
    "Ec2ForDlVpcVPCGW2C274136"
   ],
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "Ec2ForDlVpcIGW1AE92644": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2ForDL2/Ec2ForDl-Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Vpc/IGW"
   }
  },
  "Ec2ForDlVpcVPCGW2C274136": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "Ec2ForDlVpcIGW1AE92644"
    },
    "VpcId": {
     "Ref": "Ec2ForDlVpcE65EB314"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Vpc/VPCGW"
   }
  },
  "Ec2ForDlSgE309C7DD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Ec2ForDL2/Ec2ForDl-Sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:22",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": {
     "Ref": "Ec2ForDlVpcE65EB314"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Sg/Resource"
   }
  },
  "Ec2ForDlInstanceInstanceRoleB7875055": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonS3FullAccess"
       ]
      ]
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2ForDL2/Ec2ForDl-Instance"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Instance/InstanceRole/Resource"
   }
  },
  "Ec2ForDlInstanceInstanceProfile501596D9": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "Ec2ForDlInstanceInstanceRoleB7875055"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Instance/InstanceProfile"
   }
  },
  "Ec2ForDlInstanceF0415522": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "IamInstanceProfile": {
     "Ref": "Ec2ForDlInstanceInstanceProfile501596D9"
    },
    "ImageId": "ami-001a9ab9792bd35d3",
    "InstanceType": "g4dn.2xlarge",
    "KeyName": "home2",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "Ec2ForDlSgE309C7DD",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "Ec2ForDlVpcpublicSubnet1Subnet57047971"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2ForDL2/Ec2ForDl-Instance"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "Ec2ForDlInstanceInstanceRoleB7875055"
   ],
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/Ec2ForDl-Instance/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/1WPTW+DMAyGf0vvIRtw6Bn1UPU0BFOvU0hd1Ss4KLFVIcR/Lyy0aCe/fvzx2plO97nOduYREnu5Jy02eqzZ2Lua0c8INtPjubfqcKVzeVClNC3aWhoCXtimKicM36ZpYeMbK0JwFg2jo3fzIk7E4OfOo2F4mGG1WbOC50NuHRCrGqx45OHonfR/Bv/AiQIbsuvKqCeFptNj5eJFr/gql95dsYVpUhUEJz4Ofwn3Ev9Z6aTKgW+OPnKdpjr93P0GxMQLMXagqxifJ7t1hkcBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "Ec2ForDL2/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "InstancePublicDnsName": {
   "Value": {
    "Fn::GetAtt": [
     "Ec2ForDlInstanceF0415522",
     "PublicDnsName"
    ]
   }
  },
  "InstancePublicIp": {
   "Value": {
    "Fn::GetAtt": [
     "Ec2ForDlInstanceF0415522",
     "PublicIp"
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
